--- a/Hospital Website/hospital.css
+++ b/Hospital Website/hospital.css
@@ -1,128 +1,170 @@
+
 *{
     margin: 0%;
     padding: 0%;
 }
 body{
     font-family: 'Roboto', sans-serif;
-    background-color: rgb(223, 222, 222);
-}
+    background-color: #e6e6e6;
+} 
 nav{
     display: flex;
     align-items: center;
     justify-content: space-around;
+    padding: 20px;
+    background-color: rgb(11, 78, 78);
+    color: white;
     position: fixed;
     top: 0%;
     width: 100%;
-    height: 70px;
-    background-color: rgb(3, 126, 202);
 }
 ul{
     display: flex;
 }
-ul li{
+ul li {
     list-style: none;
 }
 ul li a{
     text-decoration: none;
+    font-size: 20px;
+    margin-inline: 20px;
     color: white;
-    font-size: 21px;
-    margin-inline: 22px;
+}
+ul li a:hover{
+    color: black;
+    border-bottom: 2px solid black;
 }
 .logo{
     font-size: 22px;
 }
+
 .main{
     display: flex;
+    align-items: center;
     justify-content: space-around;
-    margin-top: 88px;
+     background-color: rgb(16, 106, 106);
+     color: white;
+     height: 640px;
+    
+} 
+.mainText h1{
+    font-size: 55px;
 }
-.main img{
-    width: 320px;
+.mainText h3{
+    font-size: 35px;
+    margin-top: 20px;
 }
-.mainText{
-    margin-top: 55px;
-}
-.main h1{
-    font-size: 66px;
-}
-.main p{
-  margin-top: 22px;
-}
-.main button{
+.mainText button{
     width: 140px;
     height: 40px;
-    background-color: blue;
+    background-color: black;
     color: white;
     font-size: 20px;
-    margin-top: 22px;
     border: none;
-    cursor: pointer;
+    margin-top: 22px;
+}
+.mainText button:hover{
+    border: 2px solid black;
+    background-color: transparent;
+}
+.teams{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+}
+.teams .card{
+    width: 300px;
+    height: 390px;
+    background-color: #fff;
+    border-radius: 5px;
+    margin-inline: 20px;
+    margin-top: 22px;
+}
+.card img{
+    width: 100%;
+    height: 300px;
+    border-radius: 5px;
+}
+.card p{
+    margin-top: 11px;
+    margin-left: 11px;
 }
 .head{
     text-align: center;
-    padding:88px;
+    padding: 80px;
 }
-.special{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-
-}
-.special .card{
-    width: 300px;
-    height: 130px;
-    padding: 22px;
-    background-color: rgb(0, 128, 255);
-    color: white;
-    margin-inline: 22px;
-    border-radius: 6px;
-    text-align: center;
-    cursor: pointer;
-    margin-top: 22px;
-
-}
-.doctor{
+.speciality{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
-.docCard{
+.speciality .spCard{
     width: 300px;
-    margin-inline: 22px;
-    text-align: center;
-    margin-top: 22px;
-}
-.docCard img{
-    width: 100%;
-    height: 300px;
-}
-.docCard p{
-    background-color: black;
     padding: 22px;
-    color: white;
-    font-size: 22px;
+    background-color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    margin-top: 22px;
+
+    margin-inline: 20px;
 }
-.review{
-    width: 900px;
-    height: 300px;
+.spCard img{
+    width: 200px;
+}
+.spCard p{
+    margin-top: 11px;
+}
+.reviews{
+    width: 800px;
+    height: 400px;
     position: relative;
-    margin:auto ;
+    margin: auto;
     overflow: hidden;
 }
-.reviewCard{
-    width: 100%;
-    height: 100%;
+.patientReview{
     display: flex;
     justify-content: center;
+    width: 100%;
+    height: 100%; 
     position: absolute;
-    margin: auto;
-    text-align: center;
+    /* background-color: #fff; */
     transition: all 1s ease;
 }
-.reviewCard img{
-    width: 240px;
-    margin-inline: 22px;
-    height: 250px;
+.patientReview img{
+    width: 300px;
+    margin-inline: 18px;
+    border-radius: 4px;
+}
+.contact{
+    width: 300px;
+    background-color: #fff;
+    padding: 22px;
+    border-radius: 4px;
+    text-align: center;
+    margin: auto;
+}
+.contact input{
+    width: 90%;
+    font-size: 18px;
+    padding: 9px;
+    margin-top: 22px;
+    border: none;
+    outline: none;
+    background-color: #e4e1e1;
+    border-radius: 2px;
+}
+.contact button{
+    width: 100px;
+    height: 30px;
+    background-color: rgb(13, 98, 98);
+    color: white;
+    font-size: 17px;
+    border: none;
+    margin-top: 22px;
+}
+.contact h1{
+    color: rgb(16, 103, 103);
 }
 .footer{
     display: flex;
@@ -130,99 +172,113 @@ ul li a{
     justify-content: space-around;
     padding: 66px;
     margin-top: 66px;
-    background-color: black;
+    background-color: rgb(11, 76, 76);
     color: white;
-
 }
 .text p{
-    margin-top: 22px;
-}
-#icon{
-    font-size: 27px;
-    cursor: pointer;
-}
-.mode{
-    background-color: rgb(17, 17, 17);
-    color: rgb(255, 255, 255);
-}
-.detailCard{
-    width: 400px;
-    height: 260px;
-    background-color: rgb(2, 102, 102);
-    color: white;
-    text-align: center;
-    padding: 22px;
-    border-radius: 7px;
+    margin-top: 12px;
+} 
+.detail{
+    display: none;
     position: fixed;
     left: 50%;
     right: 50%;
-    transform: translate(-50%, 40%);
     top: 5%;
+    transform: translate(-50%, 40%);
+    background-color: #fff;
+    padding: 22px;
+    width: 400px;
+    border-radius: 4px;
+     
 }
-.detailCard h1{
+.content{
+    display: flex;
+    gap: 22px;
+}
+.content img{
+    width: 200px;
+    height: 250px;
+}
+.content p{
     margin-top: 22px;
 }
-.detailCard p{
-    margin-top: 22px;
-}
-#cross{
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    background-color: black;
-    padding: 11px;
-    font-size: 22px;
-    border-radius: 5px;
+.detail button{
+    position: relative;
+    top: -23px;
+    left: -22px;
+    width: 30px;
+    height: 30px;
+    background-color: rgb(12, 94, 94);
+    color: white;
+    font-size: 18px;
+    border: none;
+    border-radius: 4px;
     cursor: pointer;
-
 }
-
-@media screen and (max-width:960px){
+#bar{
+    display: none;
+    font-size: 26px;
+}
+@media screen and (max-width:1100px){
     .main{
         display: block;
         text-align: center;
+        /* height: auto; */
     }
+    .mainText h1{
+        margin-top: 76px;
+    }
+}
+
+@media screen and (max-width:900px){
     ul{
         display: none;
     }
+    #bar{
+        display: block;
+    }
 }
 
-@media screen and (max-width:920px){
-    .review{
+@media screen and (max-width:850px){
+    .reviews{
         width: 90%;
+         
     }
-    .review img{
-        width: 200px;
-        margin-inline: 9px;
-    }
-}
-
-@media screen and (max-width:670px){
-    .review img{
-        width: 170px;
-        height: 170px;
-        margin-inline: 4px;
-    }
-}
-
-@media screen and (max-width:500px){
-    .review img{
-        width: 100px;
-        height: 110px;
-    }
-    .detailCard{
-        width: 80%;
+    .patientReview img{
+        width: 40%;
+        height: 200px;
     }
 }
 
 @media screen and (max-width:600px){
-    .main h1{
+    .mainText h1{
         font-size: 33px;
     }
-    .main p{
-        font-size: 14px;
+    .mainText h3{
+        font-size: 23px;
     }
     .main img{
+        width: 90%;
+    }
+    .reviews{
+        width: 80%;
+    }
+    .patientReview img{
+        width: 40%;
+        height: 160px;
+        margin-inline: 6px;
+    }
+    .contact{
+        width: 80%;
+    }
+    .detail{
+        width: 80%;
+    }
+    .content{
+        display: block;
+        text-align: center;
+    }
+    .content img{
         width: 90%;
     }
 }
