--- a/Hospital Website/index.css
+++ b/Hospital Website/index.css
@@ -1,257 +1,303 @@
+/* why choose
+doctor slider
+surgery availables
+services : ambulance */
 *{
     margin: 0%;
     padding: 0%;
 }
 body{
     font-family: 'Roboto', sans-serif;
-    background-color: rgb(223, 222, 222);
+    background-color: #e2e2e2;
 }
 nav{
     display: flex;
     align-items: center;
     justify-content: space-around;
-    background-color: rgb(3, 136, 189);
-    color: white;
+    padding: 20px;
     position: fixed;
-    width: 100%;
     top: 0%;
-    height: 70px;
-
+    width: 100%;
+    background-color: rgb(9, 102, 102);
+    color: white;
 }
-.logo{
-    font-size: 22px;
-}
-ul{
+ul {
     display: flex;
 }
-ul li {
+ul li{
     list-style: none;
 }
 ul li a{
     text-decoration: none;
-    margin-inline: 22px;
-    font-size: 20px;
     color: white;
+    font-size: 20px;
+    margin-inline: 20px;
 }
 ul li a:hover{
     color: black;
-  
+    border-bottom: 2px solid black;
 }
-nav i{
-    font-size: 27px;
-    cursor: pointer;
-    color: black;
+.logo{
+    font-size: 22px;
 }
 .main{
     display: flex;
+    align-items: center;
     justify-content: space-around;
-    margin-top: 88px;
-}
-.main img{
-    width: 320px;
-}
-.mainText{
-    margin-top: 52px;
-}
-.main h1{
-    font-size: 65px;
-    margin-top: 22px;
-}
-.main p{
-    font-size: 18px;
-    margin-top: 22px;
-}
-.main button{
-    font-size:22px;
-    margin-top: 22px;
-    width: 140px;
-    height: 40px;
-    background-color: rgb(2, 2, 80);
-    border: none;
+    background-color: rgb(15, 128, 128);
     color: white;
-}
-.main button:hover{
-    background-color: rgb(4, 80, 245);
-    cursor: pointer;
+    padding: 8px;
+    height: 600px;
+    margin-top: 55px;
 }
 
-.special{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+.mainText h1{
+    font-size: 55px;
 }
-.special .card{
-    width: 300px;
-    height: 120px;
-    padding: 22px;
-    text-align: center;
-    background-color: rgb(7, 152, 236);
-    text-align: center;
-    border-radius: 5px;
-    margin-inline: 22px;
-    color: white;
-    margin-top: 22px;
+
+.mainText h3{
+    font-size: 35px;
+    margin-top: 12px;
 }
-.card p{
-    font-size: 22px;
-    margin-top: 22px;
-}
-.head{
-    text-align: center;
-    padding: 88px;
-}
-.doctor{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.doctor .docCard{
-    width: 300px;
-    margin-inline: 22px;
+.mainText button{
+    width: 140px;
+    height: 40px;
+    border: none;
     margin-top: 22px;
     background-color: black;
     color: white;
-    text-align: center;
+    font-size: 20px;
 }
-.docCard p{
-    padding: 18px;
-    font-size: 22px;
+.mainText button:hover{
+    border: 2px solid black;
+    background-color: transparent;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+     
 }
-.docCard img{
+.doctors{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.card{
+    width: 300px;
+    height: 380px;
+    background-color: #fff;
+    margin-inline: 20px;
+    border-radius: 4px;
+    margin-top: 22px;
+}
+.card img{
     width: 100%;
     height: 300px;
+    border-radius: 4px;
 }
- 
+.card p{
+    margin-top: 11px;
+    margin-left: 11px;
+}
+.head{
+    text-align: center;
+    padding: 80px;
+}
 
-
-.review{
-    width: 900px;
+.surgery{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.surgeryCard{
+    text-align: center;
+    width: 300px;
+    background-color: white;
+    margin-inline: 20px;
+    padding: 20px;
+    margin-top: 22px;
+}
+.surgeryCard img{
+    width: 100px;
+}
+.surgeryCard p{
+    margin-top: 12px;
+}
+.patients{
+    width: 800px;
     height: 300px;
     position: relative;
     overflow: hidden;
     margin: auto;
+
 }
-.reviewCard{
-    display: flex;
+.patientCard{
+    display: flex; 
     justify-content: center;
-    position: absolute;
     width: 100%;
     height: 100%;
+    position: absolute;
     transition: all 1s ease;
 }
-.reviewCard img{
-    width: 260px;
-    height: 300px;
-    margin-inline: 15px;
+.patientCard img{
+     width: 350px;
+     margin-inline: 11px;
+     border-radius: 5px;
+     
+}
+ 
+.contact{
+    width: 300px;
+    background-color: #fff;
+    padding: 40px;
+    margin: auto;
+    text-align: center;
+    border-radius: 5px;
+}
+.contact h1{
+    
+    color: rgb(9, 77, 77);
+}
+.contact input{
+    width: 90%;
+    padding: 9px;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #e2e2e2;
+    border-radius: 2px;
+    margin-top: 20px;
+}
+.contact button{
+    width: 90px;
+    height: 30px;
+    margin-top: 23px;
+    background-color: rgb(12, 95, 95);
+    color: white;
+    font-size: 17px;
+    border: none;
 }
 .footer{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    flex-wrap: wrap;
-    background-color: black;
-    color: white;
     padding: 66px;
+    color: white;
     margin-top: 66px;
-}
-.text{
-    margin-top: 22px;
+    background-color: rgb(6, 51, 51);
+
 }
 .text p{
     margin-top: 12px;
 }
 
-  
- .toggle{
-    background-color: rgb(49, 49, 49);
-    color: white;
- }
-  
-
- .detailCard{
-    width: 400px;
-    padding: 21px;
-    border-radius: 6px;
-    background-color: rgb(0, 134, 134);
+.content{
+    display: none;
     position: fixed;
     top: 5%;
     left: 50%;
     right: 50%;
+    width: 500px;
     transform: translate(-50%, 40%);
-    text-align: center;
-    color: white;
- }
- .detailCard h2{
+    background-color: #fff;
+    border-radius:11px;
+
+}
+.contentDetail{
+    display: flex;
+    padding: 23px;
+    gap: 22px;
+     
+}
+.contentDetail img{
+    width: 50%;
+    height: 300px;
+}
+.contentDetail p{
     margin-top: 22px;
- }
- .detailCard p{
-    margin-top: 22px;
- }
- .detailCard #cross{
-    position: absolute;
-    left: 0%;
-    top: 0%;
-    background-color: black;
-    padding: 9px;
+}
+.content button{
+    width: 30px;
+    height: 30px;
+    background-color: rgb(9, 97, 97);
+    border: none;
     border-radius: 3px;
-    font-size: 22px;
+    font-size: 18px;
+    color: white;
     cursor: pointer;
- }
-
- @media screen and (max-width:950px){
-    .review{
-        width: 90%;
-
-    }
-    .review img{
-        width: 200px;
-        margin-inline: 8px;
-    }
+    
+}
+#bar{
+    align-items: center;
+    display: none;
+    font-size: 25px;
+}
+@media screen and (max-width:1100px){
     .main{
-        display: block;
         text-align: center;
+        display: block;
+        height: auto;
     }
+    .mainText{
+        margin-top: 115px;
+    }
+}
+
+@media screen and (max-width:900px){
     ul{
         display: none;
     }
- }
- 
- @media screen and (max-width:720px){
-    .review{
-        width: 88%;
+    #bar{
+        display: block;
+    }
 
-    }
-    .review img{
-        width: 180px;
-        height: 200px;
-        margin-inline: 4px;
-    }
-    
- }
- 
- @media screen and (max-width:620px){
-    .review{
+} 
+
+@media screen and (max-width:850px){
+    .patients{
         width: 90%;
-
     }
-    .review img{
-        width: 100px;
-        height: 120px;
-        margin-inline: 4px;
+    .patientCard img{
+        width: 40%;
     }
-    .main h1{
-        font-size: 34px;
+}
+@media screen and (max-width:600px){
+    .mainText h1{
+        font-size: 33px;
     }
     .main img{
         width: 90%;
     }
-    .main p{
-        font-size: 15px;
+    .content{
+        width: 90%;
     }
- }
-  
- @media screen and (max-width:500px){
-    .detailCard{
-        width: 80%;
+    .contentDetail img{
+        width: 50%;
     }
- }
+}
+
+@media screen and (max-width:500px){
+    .patientCard img{
+        width: 40%;
+        height: 200px;
+        margin-inline: 8px;
+    }
+    .contact{
+        width: 60%;
+    }
+}
+
+@media screen and (max-width:400px){
+    .contentDetail img{
+        width: 50%;
+        height: 200px;
+    }
+    .contentDetail{
+        display: block;
+        text-align: center;
+    }
+    .contentDetail h1{
+        font-size: 22px;
+    }
+    .contentDetail p{
+        font-size: 15bpx;
+    }
+}
